1. Book cannot be duplicated by Author 2. BookController.java method addBook() added